# KinoVolume

./: .gitignore  CITATION.cff  Development Manual  Development Manual_original  LICENSE  README.md  audit_exporter.py  audit_script.py  config.py  macos.spec  main.py  process_icons.py  pyproject.toml
docs/images/: README.md
docs/images/interface/: README.md
docs/images/outputs/: README.md
export/: mesh_exporter.py  unfold_exporter.py
models/: project_state.py  video_source.py
packaging/macos/: build_release.sh  create_dmg.sh
processing/: base_processor.py  chroma_processor.py  cuboid_fill_processor.py  cuboid_void_processor.py  cylinder_processor.py  object_detector.py  rings_processor.py  scene_detector.py  slice_processor.py  slitscan_processor.py  slittear_processor.py
resources/icons/: KinoVolume.icns
resources/styles/: theme.qss
tests/: test_processors.py  test_video_source.py
ui/: main_window.py
ui/preview/: frame_scrubber.py  frame_viewer.py  preview_3d.py  slice_preview.py
ui/sidebar/: cuboid_controls.py  cylinder_controls.py  export_controls.py  generate_panel.py  mode_selector.py  rings_controls.py  slice_controls.py  slitscan_controls.py  slittear_controls.py  video_panel.py
ui/widgets/: color_picker.py  drawing_canvas.py  preview_toolbar.py  range_slider.py
utils/: export_metadata.py  settings.py
