[project]
name = "kinovolume"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "Pillow>=10.0",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    "trimesh>=4.0",
    "pygltflib>=1.16",
    "reportlab>=4.0",
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
